Bug 42284 - Tp-logger uses deprecated g_thread_init
Summary: Tp-logger uses deprecated g_thread_init
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: logger (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-26 09:29 UTC by Travis Reitter
Modified: 2011-10-31 14:03 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Travis Reitter 2011-10-26 09:29:42 UTC
As of GLib 2.31, g_thread_init() is deprecated. So telepathy-logger in jhbuild fails due to an escalated warning:

telepathy-logger.c: In function ‘main’:
telepathy-logger.c:156:7: error: ‘g_thread_init’ is deprecated (declared at /opt/gnome/include/glib-2.0/glib/deprecated/gthread.h:259) [-Werror=deprecated-declarations]
cc1: all warnings being treated as errors

According to the latest documentation, we may simply be able to remove the call (I haven't tried this):

http://developer.gnome.org/glib/unstable/glib-Threads.html#glib-Threads.description
Comment 1 Nicolas Dufresne 2011-10-26 09:59:22 UTC
Right, g_thread_init() has been automatically called for a while now. I just need to get the glib version where that happened and make sure the our configuration.ac file at least requires that version (I would be surprised if not).
Comment 2 Nicolas Dufresne 2011-10-31 14:03:22 UTC
Will be in 0.2.11


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.