Remove call to g_thread_init()

This is automatically called by g_type_init() since glib 2.23 and is now
deprecated.

https://bugs.freedesktop.org/show_bug.cgi?id=42284